--- a/index.html
+++ b/index.html
@@ -2047,146 +2047,197 @@ async function submitArgumentOutline() {
         }
 
         // 提交寫作內容
-async function submitWriting() {
-  const writingType = document.getElementById("writingType").value;
-  const topic = localStorage.getItem("currentTopic");
-  if (!topic) {
-    alert("請先設定題目");
-    return;
-  }
+        async function submitWriting() {
+            const writingType = document.getElementById("writingType").value;
+            const topic = localStorage.getItem("currentTopic");
+            if (!topic) {
+                alert("請先設定題目");
+                return;
+            }
 
-  if (writingType === "大綱") {
-    const structure = document.getElementById("structure").value;
-    const partsList = structure === "fourPart" ? ["起", "承", "轉", "合"] : ["起", "一線", "二線", "三線", "合"];
-    const parts = partsList.map((part, index) => {
-      const focusId = structure + "Focus" + (index + 1);
-      const plotId = structure + "Plot" + (index + 1);
-      const focus = document.getElementById(focusId)?.value.trim() || "";
-      const plot = document.getElementById(plotId)?.value.trim() || "";
-      if (!focus || !plot) {
-        alert("請填寫所有大綱表格");
-        throw new Error("Incomplete outline");
-      }
-      return { part, focus, plot };
-    });
+            let content = "";
+            let structure = "";
+            if (writingType === "大綱") {
+                structure = document.getElementById("structure").value;
+                const parts = structure === "fourPart" ? ["起", "承", "轉", "合"] : ["起", "一線", "二線", "三線", "合"];
+                content = parts.map((part, index) => {
+                    const focusId = structure + "Focus" + (index + 1);
+                    const plotId = structure + "Plot" + (index + 1);
+                    const focus = document.getElementById(focusId)?.value.trim() || "";
+                    const plot = document.getElementById(plotId)?.value.trim() || "";
+                    if (!focus || !plot) {
+                        alert("請填寫所有大綱表格");
+                        throw new Error("Incomplete outline");
+                    }
+                    return { part, focus, plot };
+                });
+            } else if (writingType === "敘事物象") {
+                content = document.getElementById("narrativeElements").value.trim();
+            } else {
+                content = document.getElementById("writingContent").value.trim();
+                if (!content) {
+                    alert("請先輸入寫作內容");
+                    return;
+                }
+            }
 
-    const tone = document.getElementById("writingTone").value;
-    const toneNote = tone === "chen" 
-      ? "請用輕鬆隨意的語氣進行點評和建議，多用EMOJI，偶爾使用網絡用語，用語要日常生活化一點。如果用戶表現良好，請大加讚賞；如果用戶表現不好，可以善意地揶揄一下，但要注意尺度，不能傷害用戶的自尊心。揶揄時，可運用生活化的比喻。"
-      : "請用嚴肅正經的語氣進行點評和建議。";
-    const note = `必須用繁體字。點評時，必須就上述生成的題目點評大綱內容是否扣題，假如大綱離題，範例便不必根據離題內容改寫。此外，點評應分為三個部份：點評、建議、改寫範例。在寫作大綱時，學生應展示他們組織思路和結構故事的能力。評分時，請注意大綱的邏輯性、條理性以及是否包含了故事的起承轉合或三線結構（即所謂「散敘」，有以下三點要注意：其一，三線的分類範疇相同；其二，三線或有層遞關係，或能從三個角度呈現同一個主題；其三，三線的情節發展不能過於相似；其四，所分之角度能突顯與主題相關的立意。「三線」例子如下：題目為「勇氣」，則可用「年少時的勇氣」為一線、「年青時的勇氣」為二線、「年老時的勇氣」為三線；又如以「重遊舊地所見有感」，則可用在故鄉的不同「地」所見作三線分類，例如老屋、後山等。必須確保每條線的「結構段重點」清晰點明三線的分類範疇、想突顯題目的甚麼要點、與題目如何扣連等，以及「合」能統攝總結全文立意）。要逐部分分析每個結構段與題目的關係有多大，並在點評中明確指出。此外，在「改寫後的大綱」,其「結構段重點」必須交代該部份與題目之間的邏輯關係，即怎樣做到扣題。此外，由於是應試文章，因此改寫後的大綱避免過份具理論哲學性及文學性，以至於脫離了現實和日常生活，亦圍繞人在經歷的情感和體悟設定，必須減少概念模糊的術語，例如「情感載體」及「時空的共創」，請用日常化用語描述。此外，「改寫後的大綱」不宜只圍繞一件事敘寫，這樣會容易寫得太抽象，應適時加插人物與人物之間的回憶或其他經歷，令文章看起來更具體實在。此外，大綱不是全篇文章，最重要的是在點評時分析其結構段及情節大要的思路是否扣緊題目，方向是否合理、正確。假如整體表現真的不錯，沒有大問題，在點評時稱讚即可，不必吹毛求疵地批評。`;
+            let toneNote = "";
+            if (writingType !== "敘事物象") {
+                const tone = document.getElementById("writingTone").value;
+                if (tone === "chen") {
+                    toneNote = "請用輕鬆隨意的語氣進行點評和建議，多用EMOJI，偶爾使用網絡用語，用語要日常生活化一點。如果用戶表現良好，請大加讚賞；如果用戶表現不好，可以善意地揶揄一下，但要注意尺度，不能傷害用戶的自尊心。揶揄時，可運用生活化的比喻。";
+                } else {
+                    toneNote = "請用嚴肅正經的語氣進行點評和建議。";
+                }
+            }
 
-    const partsListStr = parts.map(item => item.part).join(", ");
-    const prompt = `請根據以下大綱內容進行點評和建議，並提供改寫後的大綱和改寫說明。要求：
-      1. 在「=== 點評及建議 ===」部分，為以下每個結構段提供點評和建議：${partsListStr}。使用「[part]」標記每個結構段的開始，例如「[起]」，然後在下一行「點評：」後跟點評內容，再下一行「建議：」後跟建議內容。
-      2. 在「=== 改寫後的大綱 ===」部分，為以下每個結構段提供改寫後的「結構段重點」和「情節大要」：${partsListStr}。使用「[part]」標記每個結構段的開始，然後在下一行「結構段重點：」後跟內容，再下一行「情節大要：」後跟內容。
-      3. 在「=== 改寫說明 ===」部分，說明改寫的思路和原因。
-      4. 請確保內容簡潔明了。
-      題目：${topic}
-      大綱結構：${structure}
-      用戶輸入的大綱：
-      | 部份 | 結構段重點 | 情節大要 |
-      |------|------------|----------|
-      ${parts.map(item => `| ${item.part} | ${item.focus} | ${item.plot} |`).join("\n")}
-      教學筆記：${note}
-      點評及建議語氣：${toneNote}`;
+            const note = categories[writingType].commentNote;
 
-    document.getElementById("commentResult").innerHTML = "陳SIR正在點評...";
+            let prompt = "";
+            if (writingType === "大綱") {
+                prompt = `請根據以下大綱內容進行點評和建議，並提供改寫後的大綱。要求：
+                1. 在「=== 點評及建議 ===」部分，為每個結構段提供點評和建議。使用「[part]」標記每個結構段的開始，例如「[起]」，然後在下一行「點評：」後跟點評內容，再下一行「建議：」後跟建議內容。
+                2. 在「=== 改寫後的大綱 ===」部分，為每個結構段提供改寫後的「結構段重點」和「情節大要」。使用「[part]」標記每個結構段的開始，然後在下一行「結構段重點：」後跟內容，再下一行「情節大要：」後跟內容。結構段數量必須與用戶選擇的大綱結構一致（起承轉合為4段，三線為5段：起、一線、二線、三線、合）。
+                3. 在「=== 改寫說明 ===」部分，提供不超過兩點的改寫說明，每點以「1. 」和「2. 」開始。
+                4. 在「=== 改寫後的大綱 ===」中，請使用正式的語氣，不使用EMOJI或網絡用語。
+                請確保內容簡潔明了。
+                題目：${topic}
+                大綱結構：${structure === "fourPart" ? "起承轉合" : "三線（起、一線、二線、三線、合）"}
+                用戶輸入的大綱：
+                | 部份 | 結構段重點 | 情節大要 |
+                |------|------------|----------|
+                ${content.map(item => `| ${item.part} | ${item.focus} | ${item.plot} |`).join("\n")}
+                教學筆記：${note}
+                點評及建議語氣：${toneNote}`;
+            } else if (writingType === "敘事物象") {
+                prompt = `請根據以下題目和取材/故事背景生成五十個不重複且相關的物象。要求：
+                1. 物象必須與題目和取材/故事背景緊密相關。
+                2. 物象應多樣化且生動，能夠增強故事的真實感和情感表達。
+                3. 請以列表形式呈現，每個物象占一行。
+                4. 請確保物象不重複且排版整齊。
+                題目：${topic}
+                取材/故事背景：${content || "無具體背景，根據題目生成"}
+                教學筆記：${note}`;
+            } else {
+                const focus = localStorage.getItem("currentFocus");
+                const plot = localStorage.getItem("currentPlot");
+                prompt = `請根據以下內容進行點評，要求：
+                1. 簡明扼要
+                2. 參考教學筆記
+                3. 評論寫作內容與題目、結構段重點和情節大要的關係
+                4. 輸出分為三個部分：### 點評、### 建議、### 改寫範例
+                5. 點評時，聚焦詳略剪裁和文句（包括示現敘事和密度），選取最重要的一至兩點
+                6. 若結構段重點或情節大要與題目關係薄弱，需在點評中指出並重點說明
+                7. 點評和建議不應使用列點形式，應以段落呈現
+                8. 在「### 改寫範例」中，請使用正式的語氣，不使用EMOJI或網絡用語。
+                題目：${topic}
+                結構段重點：${focus}
+                情節大要：${plot}
+                寫作內容：${content}
+                教學筆記：${note}
+                點評及建議語氣：${toneNote}`;
+            }
 
-    try {
-      const response = await fetch('/api/deepseek', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ prompt, max_tokens: 900 })
-      });
+            document.getElementById("commentResult").innerHTML = "陳SIR正在點評...";
 
-      if (!response.ok) {
-        throw new Error(`API 調用失敗: ${response.statusText}`);
-      }
+            try {
+                const comment = await callAPI(prompt);
+                if (writingType === "大綱") {
+                    const sections = comment.split(/=== (.+?) ===/).filter(s => s.trim());
+                    const commentIndex = sections.indexOf("點評及建議");
+                    const rewriteIndex = sections.indexOf("改寫後的大綱");
+                    const explanationIndex = sections.indexOf("改寫說明");
 
-      const data = await response.json();
-      const comment = data.result;
-      console.log("API 回應:", comment); // 添加日誌輸出以檢查原始回應
+                    const commentPart = commentIndex !== -1 ? sections[commentIndex + 1] : "";
+                    const rewritePart = rewriteIndex !== -1 ? sections[rewriteIndex + 1] : "";
+                    const explanationPart = explanationIndex !== -1 ? sections[explanationIndex + 1] : "";
 
-      const sections = comment.split(/=== (.+?) ===/).filter(s => s.trim());
-      const commentIndex = sections.indexOf("點評及建議");
-      const rewriteIndex = sections.indexOf("改寫後的大綱");
-      const explanationIndex = sections.indexOf("改寫說明");
+                    const parts = structure === "fourPart" ? ["起", "承", "轉", "合"] : ["起", "一線", "二線", "三線", "合"];
 
-      const commentPart = commentIndex !== -1 ? sections[commentIndex + 1] : "";
-      const rewritePart = rewriteIndex !== -1 ? sections[rewriteIndex + 1] : "";
-      const explanationPart = explanationIndex !== -1 ? sections[explanationIndex + 1] : "";
+                    function parseCommentPart(commentPart) {
+                        const comments = {};
+                        const regex = /\[(.+?)\]\s*點評：\s*(.+?)(?=\s*建議：|\s*\[|$)/gs;
+                        const suggestionRegex = /\[(.+?)\]\s*點評：.+?\s*建議：\s*(.+?)(?=\s*\[|$)/gs;
+                        let match;
 
-      // 解析點評和建議
-      function parseCommentPart(commentPart) {
-        const comments = {};
-        const regex = /\[(.+?)\]\s*點評：\s*(.+?)(?=\s*建議：|\s*\[|$)/gs;
-        const suggestionRegex = /\[(.+?)\]\s*點評：.+?\s*建議：\s*(.+?)(?=\s*\[|$)/gs;
-        let match;
+                        while ((match = regex.exec(commentPart)) !== null) {
+                            const part = match[1];
+                            comments[part] = comments[part] || {};
+                            comments[part].comment = match[2].trim();
+                        }
+                        while ((match = suggestionRegex.exec(commentPart)) !== null) {
+                            const part = match[1];
+                            comments[part] = comments[part] || {};
+                            comments[part].suggestion = match[2].trim();
+                        }
+                        return comments;
+                    }
 
-        while ((match = regex.exec(commentPart)) !== null) {
-          const part = match[1];
-          comments[part] = comments[part] || {};
-          comments[part].comment = match[2].trim();
+                    function parseRewritePart(rewritePart) {
+                        const rewrites = {};
+                        const regex = /\[(.+?)\]\s*結構段重點：\s*(.+?)(?=\s*情節大要：|\s*\[|$)/gs;
+                        const plotRegex = /\[(.+?)\]\s*結構段重點：.+?\s*情節大要：\s*(.+?)(?=\s*\[|$)/gs;
+                        let match;
+
+                        while ((match = regex.exec(rewritePart)) !== null) {
+                            const part = match[1];
+                            rewrites[part] = rewrites[part] || {};
+                            rewrites[part].focus = match[2].trim();
+                        }
+                        while ((match = plotRegex.exec(rewritePart)) !== null) {
+                            const part = match[1];
+                            rewrites[part] = rewrites[part] || {};
+                            rewrites[part].plot = match[2].trim();
+                        }
+                        return rewrites;
+                    }
+
+                    const comments = parseCommentPart(commentPart);
+                    const rewrites = parseRewritePart(rewritePart);
+
+                    let commentTableHTML = `<h3>陳SIR點評及建議：</h3><div class="table-container"><table id="commentTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th><th>點評</th><th>建議</th></tr>`;
+                    content.forEach(item => {
+                        const comment = comments[item.part]?.comment || "無";
+                        const suggestion = comments[item.part]?.suggestion || "無";
+                        commentTableHTML += `<tr><td>${item.part}</td><td>${item.focus}</td><td>${item.plot}</td><td>${comment}</td><td>${suggestion}</td></tr>`;
+                    });
+                    commentTableHTML += "</table></div>";
+
+                    let rewriteTableHTML = `<h3>改寫後的大綱：</h3><div class="table-container"><table id="rewriteTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th></tr>`;
+                    parts.forEach(part => {
+                        const rewrite = rewrites[part] || { focus: "無", plot: "無" };
+                        rewriteTableHTML += `<tr><td>${part}</td><td>${rewrite.focus || "無"}</td><td>${rewrite.plot || "無"}</td></tr>`;
+                    });
+                    rewriteTableHTML += "</table></div>";
+
+                    const explanationHTML = `<h3>改寫說明：</h3><pre>${explanationPart.trim() || "無說明"}</pre>`;
+                    document.getElementById("commentResult").innerHTML = commentTableHTML + rewriteTableHTML + explanationHTML;
+                } else if (writingType === "敘事物象") {
+                    const elements = comment.split("\n").map(item => item.trim()).filter(item => item);
+                    let elementsHTML = "<h3>生成的物象（50項）：</h3><ul>";
+                    elements.forEach(element => elementsHTML += `<li>${element}</li>`);
+                    elementsHTML += "</ul>";
+                    document.getElementById("commentResult").innerHTML = elementsHTML;
+                } else {
+                    const commentParts = comment.split("###").map(part => part.trim()).filter(part => part);
+                    let commentHTML = "<h3>陳SIR點評：</h3><table>";
+                    commentParts.forEach(part => {
+                        const [title, ...content] = part.split("\n").filter(line => line.trim());
+                        commentHTML += `<tr><th><strong>${title}</strong></th></tr><tr><td>${content.join("<br>")}</td></tr>`;
+                    });
+                    commentHTML += "</table>";
+                    document.getElementById("commentResult").innerHTML = commentHTML;
+                }
+            } catch (error) {
+                console.error("提交寫作時出錯:", error);
+                if (error.message === "所有 API 密鑰均無法使用") {
+                    alert("今日 API 調用次數已用完或API無法連接，請明天再試");
+                } else {
+                    alert("點評生成失敗，請重試");
+                }
+                document.getElementById("commentResult").innerHTML = "";
+            }
         }
-        while ((match = suggestionRegex.exec(commentPart)) !== null) {
-          const part = match[1];
-          comments[part] = comments[part] || {};
-          comments[part].suggestion = match[2].trim();
-        }
-        return comments;
-      }
-
-      // 解析改寫後的大綱
-      function parseRewritePart(rewritePart) {
-        const rewrites = {};
-        const regex = /\[(.+?)\]\s*結構段重點：\s*(.+?)(?=\s*情節大要：|\s*\[|$)/gs;
-        const plotRegex = /\[(.+?)\]\s*結構段重點：.+?\s*情節大要：\s*(.+?)(?=\s*\[|$)/gs;
-        let match;
-
-        while ((match = regex.exec(rewritePart)) !== null) {
-          const part = match[1];
-          rewrites[part] = rewrites[part] || {};
-          rewrites[part].focus = match[2].trim();
-        }
-        while ((match = plotRegex.exec(rewritePart)) !== null) {
-          const part = match[1];
-          rewrites[part] = rewrites[part] || {};
-          rewrites[part].plot = match[2].trim();
-        }
-        return rewrites;
-      }
-
-      const comments = parseCommentPart(commentPart);
-      const rewrites = parseRewritePart(rewritePart);
-
-      // 生成點評和建議表格
-      let commentTableHTML = `<h3>陳SIR點評及建議：</h3><div class="table-container"><table id="commentTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th><th>點評</th><th>建議</th></tr>`;
-      parts.forEach(item => {
-        const comment = comments[item.part]?.comment || "無";
-        const suggestion = comments[item.part]?.suggestion || "無";
-        commentTableHTML += `<tr><td>${item.part}</td><td>${item.focus}</td><td>${item.plot}</td><td>${comment}</td><td>${suggestion}</td></tr>`;
-      });
-      commentTableHTML += "</table></div>";
-
-      // 生成改寫後的大綱表格
-      let rewriteTableHTML = `<h3>改寫後的大綱：</h3><div class="table-container"><table id="rewriteTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th></tr>`;
-      parts.forEach(item => {
-        const rewrite = rewrites[item.part] || { focus: "無", plot: "無" };
-        rewriteTableHTML += `<tr><td>${item.part}</td><td>${rewrite.focus || "無"}</td><td>${rewrite.plot || "無"}</td></tr>`;
-      });
-      rewriteTableHTML += "</table></div>";
-
-      // 生成改寫說明
-      const explanationHTML = `<h3>改寫說明：</h3><pre>${explanationPart.trim() || "無說明"}</pre>`;
-
-      document.getElementById("commentResult").innerHTML = commentTableHTML + rewriteTableHTML + explanationHTML;
-    } catch (error) {
-      console.error("提交大綱時出錯:", error);
-      alert("點評生成失敗，請檢查控制台以獲取詳細信息");
-      document.getElementById("commentResult").innerHTML = "";
-    }
-  }
 
         // 提交閱讀內容
         async function submitReading() {
