--- a/index.html
+++ b/index.html
@@ -2047,8 +2047,7 @@ async function submitArgumentOutline() {
         }
 
         // 提交寫作內容
-       // 提交寫作內容
-async function submitWriting() {
+     async function submitWriting() {
     const writingType = document.getElementById("writingType").value;
     const topic = localStorage.getItem("currentTopic");
     if (!topic) {
@@ -2096,48 +2095,48 @@ async function submitWriting() {
 
     let prompt = "";
     if (writingType === "大綱") {
-        const partsList = content.map(item => item.part).join(", ");
         prompt = `請根據以下大綱內容進行點評和建議，並提供改寫後的大綱。要求：
-        1. 在「=== 點評及建議 ===」部分，為以下每個結構段提供點評和建議：${partsList}。使用「[part]」標記每個結構段的開始，例如「[起]」，然後在下一行「點評：」後跟點評內容，再下一行「建議：」後跟建議內容。
-        2. 在「=== 改寫後的大綱 ===」部分，為以下每個結構段提供改寫後的「結構段重點」和「情節大要」：${partsList}。使用「[part]」標記每個結構段的開始，然後在下一行「結構段重點：」後跟內容，再下一行「情節大要：」後跟內容。
-        3. 請確保內容簡潔明了。
-        4. 請確保「=== 改寫後的大綱 ===」部分的「結構段重點」和「情節大要」與題目緊密相關。
-        題目：${topic}
-        大綱結構：${structure === "fourPart" ? "起承轉合" : "三線（起、一線、二線、三線、合）"}
-        用戶輸入的大綱：
-        | 部份 | 結構段重點 | 情節大要 |
-        |------|------------|----------|
-        ${content.map(item => `| ${item.part} | ${item.focus} | ${item.plot} |`).join("\n")}
-        教學筆記：${note}
-        點評及建議語氣：${toneNote}
-        建議和改寫後的大綱語氣：請使用嚴肅正經的語氣，不使用EMOJI或網絡用語。`;
+1. 在「=== 點評及建議 ===」部分，為每個結構段提供點評和建議。使用「[part]」標記每個結構段的開始，例如「[起]」，然後在下一行「點評：」後跟點評內容，再下一行「建議：」後跟建議內容。
+2. 在「=== 改寫後的大綱 ===」部分，為每個結構段提供改寫後的「結構段重點」和「情節大要」。使用「[part]」標記每個結構段的開始，然後在下一行「結構段重點：」後跟內容，再下一行「情節大要：」後跟內容。結構段數量必須與用戶選擇的大綱結構一致（起承轉合為4段，三線為5段：起、一線、二線、三線、合）。
+3. 在「=== 改寫說明 ===」部分，提供不超過兩點的改寫說明，每點以「1. 」和「2. 」開始。
+4. 在「=== 改寫後的大綱 ===」中，請使用正式的語氣，不使用EMOJI或網絡用語。
+請確保內容簡潔明了。
+請嚴格按照上述格式生成回應，否則解析將失敗。
+題目：${topic}
+大綱結構：${structure === "fourPart" ? "起承轉合" : "三線（起、一線、二線、三線、合）"}
+用戶輸入的大綱：
+| 部份 | 結構段重點 | 情節大要 |
+|------|------------|----------|
+${content.map(item => `| ${item.part} | ${item.focus} | ${item.plot} |`).join("\n")}
+教學筆記：${note}
+點評及建議語氣：${toneNote}`;
     } else if (writingType === "敘事物象") {
         prompt = `請根據以下題目和取材/故事背景生成五十個不重複且相關的物象。要求：
-        1. 物象必須與題目和取材/故事背景緊密相關。
-        2. 物象應多樣化且生動，能夠增強故事的真實感和情感表達。
-        3. 請以列表形式呈現，每個物象占一行。
-        4. 請確保物象不重複且排版整齊。
-        題目：${topic}
-        取材/故事背景：${content || "無具體背景，根據題目生成"}
-        教學筆記：${note}`;
+1. 物象必須與題目和取材/故事背景緊密相關。
+2. 物象應多樣化且生動，能夠增強故事的真實感和情感表達。
+3. 請以列表形式呈現，每個物象占一行。
+4. 請確保物象不重複且排版整齊。
+題目：${topic}
+取材/故事背景：${content || "無具體背景，根據題目生成"}
+教學筆記：${note}`;
     } else {
         const focus = localStorage.getItem("currentFocus");
         const plot = localStorage.getItem("currentPlot");
         prompt = `請根據以下內容進行點評，要求：
-        1. 簡明扼要
-        2. 參考教學筆記
-        3. 評論寫作內容與題目、結構段重點和情節大要的關係
-        4. 輸出分為三個部分：### 點評、### 建議、### 改寫範例
-        5. 點評時，聚焦詳略剪裁和文句（包括示現敘事和密度），選取最重要的一至兩點
-        6. 若結構段重點或情節大要與題目關係薄弱，需在點評中指出並重點說明
-        7. 點評和建議不應使用列點形式，應以段落呈現
-        8. 在「### 改寫範例」中，請使用正式的語氣，不使用EMOJI或網絡用語。
-        題目：${topic}
-        結構段重點：${focus}
-        情節大要：${plot}
-        寫作內容：${content}
-        教學筆記：${note}
-        點評及建議語氣：${toneNote}`;
+1. 簡明扼要
+2. 參考教學筆記
+3. 評論寫作內容與題目、結構段重點和情節大要的關係
+4. 輸出分為三個部分：### 點評、### 建議、### 改寫範例
+5. 點評時，聚焦詳略剪裁和文句（包括示現敘事和密度），選取最重要的一至兩點
+6. 若結構段重點或情節大要與題目關係薄弱，需在點評中指出並重點說明
+7. 點評和建議不應使用列點形式，應以段落呈現
+8. 在「### 改寫範例」中，請使用正式的語氣，不使用EMOJI或網絡用語。
+題目：${topic}
+結構段重點：${focus}
+情節大要：${plot}
+寫作內容：${content}
+教學筆記：${note}
+點評及建議語氣：${toneNote}`;
     }
 
     document.getElementById("commentResult").innerHTML = "陳SIR正在點評...";
@@ -2148,47 +2147,45 @@ async function submitWriting() {
             const sections = comment.split(/=== (.+?) ===/).filter(s => s.trim());
             const commentIndex = sections.indexOf("點評及建議");
             const rewriteIndex = sections.indexOf("改寫後的大綱");
+            const explanationIndex = sections.indexOf("改寫說明");
 
-            const commentPart = commentIndex !== -1 ? sections[commentIndex + 1] : "";
-            const rewritePart = rewriteIndex !== -1 ? sections[rewriteIndex + 1] : "";
+            if (commentIndex === -1 || rewriteIndex === -1 || explanationIndex === -1) {
+                throw new Error("API 回應格式不正確，缺少必要部分");
+            }
+
+            const commentPart = sections[commentIndex + 1];
+            const rewritePart = sections[rewriteIndex + 1];
+            const explanationPart = sections[explanationIndex + 1];
 
             const parts = structure === "fourPart" ? ["起", "承", "轉", "合"] : ["起", "一線", "二線", "三線", "合"];
 
             function parseCommentPart(commentPart) {
                 const comments = {};
-                const regex = /\[(.+?)\]\s*點評：\s*(.+?)(?=\s*建議：|\s*\[|$)/gs;
-                const suggestionRegex = /\[(.+?)\]\s*點評：.+?\s*建議：\s*(.+?)(?=\s*\[|$)/gs;
-                let match;
-
-                while ((match = regex.exec(commentPart)) !== null) {
-                    const part = match[1];
-                    comments[part] = comments[part] || {};
-                    comments[part].comment = match[2].trim();
-                }
-                while ((match = suggestionRegex.exec(commentPart)) !== null) {
-                    const part = match[1];
-                    comments[part] = comments[part] || {};
-                    comments[part].suggestion = match[2].trim();
-                }
+                parts.forEach(part => {
+                    const commentRegex = new RegExp(`\\[${part}\\]\\s*點評：\\s*(.+?)(?=\\s*建議：|\\s*\\[|$|===)`, 's');
+                    const suggestionRegex = new RegExp(`\\[${part}\\]\\s*.*\\s*建議：\\s*(.+?)(?=\\s*\\[|$|===)`, 's');
+                    const commentMatch = commentPart.match(commentRegex);
+                    const suggestionMatch = commentPart.match(suggestionRegex);
+                    comments[part] = {
+                        comment: commentMatch ? commentMatch[1].trim() : "無",
+                        suggestion: suggestionMatch ? suggestionMatch[1].trim() : "無"
+                    };
+                });
                 return comments;
             }
 
             function parseRewritePart(rewritePart) {
                 const rewrites = {};
-                const regex = /\[(.+?)\]\s*結構段重點：\s*(.+?)(?=\s*情節大要：|\s*\[|$)/gs;
-                const plotRegex = /\[(.+?)\]\s*結構段重點：.+?\s*情節大要：\s*(.+?)(?=\s*\[|$)/gs;
-                let match;
-
-                while ((match = regex.exec(rewritePart)) !== null) {
-                    const part = match[1];
-                    rewrites[part] = rewrites[part] || {};
-                    rewrites[part].focus = match[2].trim();
-                }
-                while ((match = plotRegex.exec(rewritePart)) !== null) {
-                    const part = match[1];
-                    rewrites[part] = rewrites[part] || {};
-                    rewrites[part].plot = match[2].trim();
-                }
+                parts.forEach(part => {
+                    const focusRegex = new RegExp(`\\[${part}\\]\\s*結構段重點：\\s*(.+?)(?=\\s*情節大要：|\\s*\\[|$|===)`, 's');
+                    const plotRegex = new RegExp(`\\[${part}\\]\\s*.*\\s*情節大要：\\s*(.+?)(?=\\s*\\[|$|===)`, 's');
+                    const focusMatch = rewritePart.match(focusRegex);
+                    const plotMatch = rewritePart.match(plotRegex);
+                    rewrites[part] = {
+                        focus: focusMatch ? focusMatch[1].trim() : "無",
+                        plot: plotMatch ? plotMatch[1].trim() : "無"
+                    };
+                });
                 return rewrites;
             }
 
@@ -2197,20 +2194,21 @@ async function submitWriting() {
 
             let commentTableHTML = `<h3>陳SIR點評及建議：</h3><div class="table-container"><table id="commentTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th><th>點評</th><th>建議</th></tr>`;
             content.forEach(item => {
-                const comment = comments[item.part]?.comment || "未生成點評";
-                const suggestion = comments[item.part]?.suggestion || "未生成建議";
+                const comment = comments[item.part].comment;
+                const suggestion = comments[item.part].suggestion;
                 commentTableHTML += `<tr><td>${item.part}</td><td>${item.focus}</td><td>${item.plot}</td><td>${comment}</td><td>${suggestion}</td></tr>`;
             });
             commentTableHTML += "</table></div>";
 
             let rewriteTableHTML = `<h3>改寫後的大綱：</h3><div class="table-container"><table id="rewriteTable"><tr><th>部份</th><th>結構段重點</th><th>情節大要</th></tr>`;
             parts.forEach(part => {
-                const rewrite = rewrites[part] || { focus: "未生成結構段重點", plot: "未生成情節大要" };
-                rewriteTableHTML += `<tr><td>${part}</td><td>${rewrite.focus || "未生成結構段重點"}</td><td>${rewrite.plot || "未生成情節大要"}</td></tr>`;
+                const rewrite = rewrites[part];
+                rewriteTableHTML += `<tr><td>${part}</td><td>${rewrite.focus}</td><td>${rewrite.plot}</td></tr>`;
             });
             rewriteTableHTML += "</table></div>";
 
-            document.getElementById("commentResult").innerHTML = commentTableHTML + rewriteTableHTML;
+            const explanationHTML = `<h3>改寫說明：</h3><pre>${explanationPart.trim() || "無說明"}</pre>`;
+            document.getElementById("commentResult").innerHTML = commentTableHTML + rewriteTableHTML + explanationHTML;
         } else if (writingType === "敘事物象") {
             const elements = comment.split("\n").map(item => item.trim()).filter(item => item);
             let elementsHTML = "<h3>生成的物象（50項）：</h3><ul>";
