--- a/index.html
+++ b/index.html
@@ -659,7 +659,8 @@ opacity: 0;
     </div>
 
 <button id="beishuBtn" style="background-color: #c39bd3;">⏱背書神器</button>
-<button id="sansiBtn" style="background-color: #5e93cc;">🖥️神思(備用）</button>
+<button id="sansiBtn" style="background-color: #5e93cc;">🖥️神思(主網）</button>
+<button id="sansi2Btn" style="background-color: #a9dfbf;">🖥️神思(備用）</button>
 </div>
        <button id="closeToolsBtn"><i class="fas fa-times"></i></button>
     </div>
@@ -1242,7 +1243,11 @@ document.getElementById("beishuBtn").addEventListener("click", function() {
 
 
 document.getElementById("sansiBtn").addEventListener("click", function() {
-    window.open("https://sansi.vercel.app/", "_blank");
+    window.open("https://kenchan20141.github.io/AIChinese/", "_blank");
+});
+
+        document.getElementById("sansi2Btn").addEventListener("click", function() {
+    window.open("https://kenchan20141.github.io/AIChinese2/", "_blank");
 });
 
 
